@@ -5,16 +5,15 @@ exterminate
     :summary: Kill things.
     :tags: fort armok units
 
-Kills any unit, or all undead, or all units of a given race. You can target any
-unit on a revealed tile of the map, including hidden ambushers, but caged or
-chained creatures cannot be killed with this tool.
+Kills any individual unit, or all undead, or all units of a given race. Caged
+and chained creatures are ignored.
 
 Usage
 -----
 
 ::
 
-    exterminate
+    exterminate [list]
     exterminate this [<options>]
     exterminate undead [<options>]
     exterminate all[:<caste>] [<options>]
@@ -25,10 +24,10 @@ Race and caste names are case insensitive.
 Examples
 --------
 
-``exterminate this``
-    Kill the selected unit.
 ``exterminate``
     List the targets on your map.
+``exterminate this``
+    Kill the selected unit.
 ``exterminate BIRD_RAVEN:MALE``
     Kill the ravens flying around the map (but only the male ones).
 ``exterminate goblin --method magma --only-visible``
@@ -65,18 +64,21 @@ Methods
 :drown: Drown the unit in water.
 :magma: Boil the unit in magma (not recommended for magma-safe creatures).
 :butcher: Will mark the units for butchering instead of killing them. This is
-    more useful for pets than armed enemies.
-:knockout: Will put units into an unconscious state for 30k ticks (about a month).
-:traumatize: Traumatizes all units, forcing them to stare off into space (catatonic state).
+    useful for pets and not useful for armed enemies.
+:knockout: Will put units into an unconscious state for 30k ticks (about a
+    month in fort mode).
+:traumatize: Traumatizes units, forcing them to stare off into space (catatonic
+    state).
 
 Technical details
 -----------------
 
-This tool kills by setting a unit's ``blood_count`` to 0, which means
-immediate death at the next game tick. For creatures where this is not enough,
-such as vampires, it also sets ``animal.vanish_countdown``, allowing the unit
-to vanish in a puff of smoke if the blood loss doesn't kill them.
+For the ``instant`` method, this tool kills by setting a unit's ``blood_count``
+to 0, which means immediate death at the next game tick. For creatures where
+this is not enough, such as vampires, it also sets ``animal.vanish_countdown``,
+allowing the unit to vanish in a puff of smoke if the blood loss doesn't kill
+them.
 
 If the method of choice involves liquids, the tile is filled with a liquid
 level of 7 every tick. If the target unit moves, the liquid moves along with
-it, leaving the vacated tiles clean.
+it, leaving the vacated tiles clean (though possibly scorched).
