@@ -14,32 +14,24 @@ local function spawnLiquid(position, liquid_level, liquid_type, update_liquids)
   map_block.flags.update_liquid_twice = update_liquids
 end
 
-local function checkUnit(unit)
-    return (unit.body.blood_count ~= 0 or unit.body.blood_max == 0) and
-        not unit.flags1.inactive and
-        not unit.flags1.caged and
-        not unit.flags1.chained
-end
-
-local function isUnitFriendly(unit)
-    if dfhack.units.isDanger(unit) then
+local function checkUnit(opts, unit)
+    if not dfhack.units.isActive(unit) or
+        (unit.body.blood_max ~= 0 and unit.body.blood_count == 0) or
+        unit.flags1.caged or
+        unit.flags1.chained
+    then
         return false
     end
-    local adv = dfhack.world.getAdventurer()
-    if adv then
-        if adv == unit or
-            unit.relationship_ids.GroupLeader == adv.id or
-            unit.relationship_ids.PetOwner == adv.id
-        then
-            return true
-        end
+    if opts.only_visible and not dfhack.units.isVisible(unit) then
+        return false
     end
-
-    return dfhack.units.isOwnCiv(unit) or
-        dfhack.units.isOwnGroup(unit) or
-        dfhack.units.isVisiting(unit) or
-        dfhack.units.isTame(unit) or
-        dfhack.units.isDomesticated(unit)
+    if not opts.include_friendly and not dfhack.units.isDanger(unit) and not dfhack.units.isWildlife(unit) then
+        return false
+    end
+    if opts.selected_caste and opts.selected_caste ~= df.creature_raw.find(unit.race).caste[unit.caste].caste_id then
+        return false
+    end
+    return true
 end
 
 killMethod = {
@@ -138,26 +130,17 @@ local function getRaceCastes(race_id)
     return unit_castes
 end
 
-local function getMapRaces(only_visible, include_friendly)
+local function getMapRaces(opts)
     local map_races = {}
     for _, unit in pairs(df.global.world.units.active) do
-        if only_visible and not dfhack.units.isVisible(unit) then
-            goto skipunit
-        end
-        if not include_friendly and isUnitFriendly(unit) then
-            goto skipunit
-        end
-        if dfhack.units.isActive(unit) and checkUnit(unit) then
-            local unit_race_name = dfhack.units.isUndead(unit) and "UNDEAD" or df.creature_raw.find(unit.race).creature_id
-
-            local race = ensure_key(map_races, unit_race_name)
-            race.id = unit.race
-            race.name = unit_race_name
-            race.count = (race.count or 0) + 1
-        end
-        :: skipunit ::
+        if not checkUnit(opts, unit) then goto continue end
+        local unit_race_name = dfhack.units.isUndead(unit) and "UNDEAD" or df.creature_raw.find(unit.race).creature_id
+        local race = ensure_key(map_races, unit_race_name)
+        race.id = unit.race
+        race.name = unit_race_name
+        race.count = (race.count or 0) + 1
+        ::continue::
     end
-
     return map_races
 end
 
@@ -200,9 +183,9 @@ if positionals[1] == "this" then
     return
 end
 
-local map_races = getMapRaces(options.only_visible, options.include_friendly)
+local map_races = getMapRaces(options)
 
-if not positionals[1] then
+if not positionals[1] or positionals[1] == 'list' then
     local sorted_races = {}
     for race, value in pairs(map_races) do
         table.insert(sorted_races, { name = race, count = value.count })
@@ -224,28 +207,19 @@ if race_name:lower() == 'undead' then
         qerror("No undead found on the map.")
     end
     for _, unit in pairs(df.global.world.units.active) do
-        if dfhack.units.isUndead(unit) and checkUnit(unit) then
+        if dfhack.units.isUndead(unit) and checkUnit(options, unit) then
             killUnit(unit, options.method)
             count = count + 1
         end
     end
 elseif positionals[1]:split(':')[1] == "all" then
-    local selected_caste = positionals[1]:split(':')[2]
+    options.selected_caste = positionals[1]:split(':')[2]
 
     for _, unit in ipairs(df.global.world.units.active) do
         if options.limit > 0 and count >= options.limit then
             break
         end
-        if not checkUnit(unit) then
-            goto skipunit
-        end
-        if options.only_visible and not dfhack.units.isVisible(unit) then
-            goto skipunit
-        end
-        if not options.include_friendly and isUnitFriendly(unit) then
-            goto skipunit
-        end
-        if selected_caste and selected_caste ~= df.creature_raw.find(unit.race).caste[unit.caste].caste_id then
+        if not checkUnit(options, unit) then
             goto skipunit
         end
 
@@ -285,21 +259,13 @@ else
     end
 
     target = selected_race
+    options.selected_caste = selected_caste
 
     for _, unit in pairs(df.global.world.units.active) do
         if options.limit > 0 and count >= options.limit then
             break
         end
-        if not checkUnit(unit) then
-            goto skipunit
-        end
-        if options.only_visible and not dfhack.units.isVisible(unit) then
-            goto skipunit
-        end
-        if not options.include_friendly and isUnitFriendly(unit) then
-            goto skipunit
-        end
-        if selected_caste and selected_caste ~= df.creature_raw.find(unit.race).caste[unit.caste].caste_id then
+        if not checkUnit(options, unit) then
             goto skipunit
         end
 
